--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>2022年|和歌山県公立高校入試学力検査問題</title>
-<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="favicon.ico">
 
 <style>
 body{
